fixed overflow bug in profile

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,23 @@
 	flex-grow: 1;
 	display: flex;
 }
+@media only screen and (max-width: 1024px) {
+	body {
+		background-color: green;
+	}
+}
+@media only screen and (max-width: 768px) {
+	body {
+		background-color: red;
+	}
+}
+@media only screen and (max-width: 425px) {
+	body {
+		background-color: blue;
+	}
+}
+@media only screen and (max-width: 375px) {
+	body {
+		background-color: purple;
+	}
+}
