--- a/src/components/SideMenu/SideMenu.css
+++ b/src/components/SideMenu/SideMenu.css
@@ -45,3 +45,9 @@
 	font-size: 20px;
 	margin-bottom: 5px;
 }
+@media only screen and (max-width: 1024px) {
+	.side_menu-master {
+		/* background-color: purple; */
+		display: none;
+	}
+}
